src/styles/styles.scss
@use './variables' as *;

html,
body {
  font-family: 'Alegreya Sans', sans-serif;
  text-align: center;
  background-color: $blue-muted;
  color: $application-font-color;
}

nav {
  position: fixed;
  right: initial;
  width: 100%;
  display: flex;
  justify-content: center;
  z-index: 1;
  padding: 8px;
  background-color: $rainbow-yellow;

  a {
    margin: auto 12px;
    font-family: 'Varela Round', sans-serif;
    letter-spacing: $letter-spacing-standard;
    text-decoration: none;
    color: $application-background-color;

    &:hover {
      text-decoration: underline;
    }
  }
}

main,
footer {
  background-color: $application-background-color;
}

main {
  padding-bottom: 16px;
}

.wedge-row {
  display: flex;
  opacity: .5;
}

.wedge {
  min-width: $wedge-standard;
  height: $wedge-standard;
  background-color: $application-background-color;

  &.top-left {
    border-top-left-radius: $one-hundred-percent;
  }

  &.top-right {
    border-top-right-radius: $one-hundred-percent;
  }

  &.bottom-left {
    border-bottom-left-radius: $one-hundred-percent;
  }

  &.bottom-right {
    border-bottom-right-radius: $one-hundred-percent;
  }
}

[class^='banner'] {
  height: 100px;
}

.banner-blue {
  margin: 64px auto;
  background-color: $rainbow-blue;
}

.banner-red {
  margin: 64px auto;
  background-color: $rainbow-red;
}

.banner-green {
  margin-bottom: 64px;
  background-color: $rainbow-green;
}

.name-and-occupations {
  padding-top: 4rem;
  margin: auto auto 16px;
  text-transform: uppercase;

  h1,
  h2 {
    margin-block-start: initial;
    margin-block-end: initial;
    font-weight: normal;
  }
}

.name {
  font-size: 1.75rem;
  letter-spacing: 1.75vw;
}

.occupations {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 1.25rem;
  letter-spacing: 1.125vw;
  color: $rainbow-green;
}

.pipe {
  display: none;
}

.headshot-img {
  border: 4px solid $fifty-percent-gray;
  border-radius: 50%;
}

main section ul {
  max-width: 600px;
  padding-bottom: .5rem;
  border-bottom: 4px dotted $application-font-color;
  margin: 1rem;

  li {
    text-align: initial;
    margin-bottom: 1rem;
    margin-right: 1rem;
  }
}

.text-link {
  text-decoration: none;
  color: $rainbow-yellow;

  &:hover {
    text-decoration: underline;
  }

  &:link,
  &:visited,
  &:focus,
  &:active {
    color: $rainbow-yellow;
  }
}

.section-title {
  margin: 16px auto 10px;
  font-size: 1.25rem;
  letter-spacing: .5vw;
}

p {
  width: 85%;
  max-width: 1000px;
  margin: auto auto 32px;
  font-family: 'Roboto', sans-serif;
  text-align: left;
}

.projects {
  max-width: 1200px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin: 0 auto;
}

.project-container {
  margin: 10px 20px 20px;
}

.project-info-outer {
  position: absolute;
  width: 240px;
  height: 429px;
  display: hidden;
  border: 1px solid transparent;
  border-radius: $border-radius-project;
  color: transparent;
  user-select: none;
}

.project-info-outer:hover {
  display: block;
  border-color: $rainbow-red;
  background-color: $black-screen;

  .project-info-title {
    margin-bottom: 12px;
    font-size: 1.25rem;
    font-weight: 700;
    letter-spacing: $letter-spacing-standard;
    color: $application-font-color;
  }

  .project-info-text {
    font-family: 'Roboto', sans-serif;
    line-height: 1.5rem;
    text-align: left;
    color: $application-font-color;

    > div {
      margin-top: 8px;
    }

    .front-end,
    .back-end {
      margin: 12px auto 6px;
      font-weight: 700;
    }
  }
}

.project-info-inner {
  padding: 48px;
}

.project-img {
  width: 240px;
  height: 429px;
  border-radius: $border-radius-project;
}

.project-title {
  font-size: 1.125rem;
  font-weight: 500;
  letter-spacing: $letter-spacing-standard;
}

.project-routing-links {
  margin-top: 8px;

  a {
    display: block;
    padding: 4px 12px;
    border: 1px solid $fifty-percent-gray;
    border-radius: 8px;
    margin: 12px auto;
    font-family: 'Varela Round', sans-serif;
    font-size: .75rem;
    font-weight: 700;
    letter-spacing: $letter-spacing-standard;
    text-decoration: none;

    &:nth-child(2) {
      border-color: $rainbow-green;
    }

    &:nth-child(3) {
      border-color: $rainbow-blue;
    }

    &:nth-child(4) {
      border-color: $rainbow-orange;
    }

    &:link,
    &:visited,
    &:active {
      color: $application-font-color;
    }

    &:hover {
      background-color: $application-font-color;
      color: $application-background-color;
    }
  }
}

.information-box {
  max-width: 240px;
  display: flex;
  flex-direction: column;
  border: 1px solid $rainbow-red;
  border-radius: 16px;
  margin: 12px auto 24px;
  padding: 32px 0;

  a {
    display: inline-block;
    margin: 20px auto;
  }
}

.information-text {
  margin-top: .5rem;
  font-family: 'Varela Round', sans-serif;
  letter-spacing: .125rem;
}

.credit {
  margin: 20px auto;
  font-family: 'Roboto', sans-serif;
  letter-spacing: $letter-spacing-standard;
}

.stripes-container {
  height: 50px;

  div {
    height: 3px;
    background-color: $orange-muted;

    &:nth-child(2),
    &:nth-child(6) {
      background-color: $rainbow-blue;
    }

    &:nth-child(3),
    &:nth-child(5) {
      background-color: $rainbow-green;
    }

    &:nth-child(4) {
      background-color: $rainbow-yellow;
    }
  }
}

.discs-container {
  display: flex;

  [class^='disc'] {
    width: 8px;
    height: 8px;
    border-radius: 100%;

    &.disc-odd {
      background-color: $application-background-color;
    }

    &.disc-even {
      background-color: $application-background-color;
    }
  }
}

.not-found-container {
  display: flex;
  justify-content: center;
  padding: 1rem;
}

.not-found-text {
  background-color: $application-background-color;
  padding: 2rem 2rem 3rem;

  a {
    font-size: 1.5rem;
  }
}

/* Breakpoint Small */

@media (min-width: $breakpoint-sm) {

  nav {
    right: 0;
    justify-content: flex-end;
  }

  [class^='banner'] {
    height: 200px;
  }

  .name {
    font-size: 3rem;
  }

  .occupations {
    flex-direction: row;
    font-size: 1.5rem;
    letter-spacing: 1vw;
  }

  .pipe {
    display: block;
  }

  main section ul {
    max-width: 500px;
    margin: 2rem auto;

    li {
      font-size: 1.5rem;
    }
  }

  .section-title {
    margin-top: 32px;
    font-size: 2rem;
  }

  p {
    width: 75%;
    margin-bottom: 48px;
    font-size: 1.5rem;
  }

  .projects {
    padding-bottom: 16px;
  }

  .project-routing-links a {
    width: 70%;
  }

  .information-box {
    width: 85%;
    max-width: 1000px;
    flex-direction: row;
    padding: 16px 24px;
    margin-bottom: 40px;
  }
}

/* Breakpoint Medium */

@media (min-width: $breakpoint-md) {

  p {
    width: 60%;
  }

  main section ul {
    max-width: 632px;
  }
}

/* Breakpoint Large */

@media (min-width: $breakpoint-lg) {

  .name {
    letter-spacing: 1.75vw;
  }

  .occupations {
    letter-spacing: .625rem;
  }
}

/* Breakpoint Extra Large */

@media (min-width: $breakpoint-xl) {

  .name {
    letter-spacing: 1.3125rem;
  }
}

